--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Vile</title>
+	<title>Reezard</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css"> 
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Inline&display=swap" rel="stylesheet">
@@ -30,11 +30,11 @@
             <h3 class="section__suptitle">Игровая валюта </h3>
             
             <div class="section__text">
-                <p>В игру будет добавлена валюта "Коины.
+                <p>В игру будет добавлена валюта "Коины".
                 Для донатеровтне будет предостовлятся какя-то особая валюта , что для обычных игроков, что для донатеров будет доступна одна валюта . Немного насчёт доната донат будет влиять на игру не так сильно как в остальных  играх , в этой игре хороший актив может противотоять донату .</p>
             </div>
         </div>
-		<img class="msa" src="1.png">
+		<img class="msa" src="1.jpg">
 		</div>
 	</div>
 
