--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <div class="section__text">
                 <p>В игру будет добавлена валюта "Коины".
-                Для донатеров не будет предостовлятся какfя-то особая валюта .Что для обычных игроков, что для донатеров будет доступна одна валюта . Немного насчёт доната, донат будет влиять на игру не так сильно как в остальных  играх , в этой игре хороший актив может противостоять донату .</p>
+                Для донатеров не будет предостовлятся какая-то особая валюта .Что для обычных игроков, что для донатеров будет доступна одна валюта . Немного насчёт доната, донат будет влиять на игру не так сильно как в остальных  играх , в этой игре хороший актив может противостоять донату .</p>
             </div>
         </div>
 		<img class="msa" src="1.jpg">
