--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <title>Document</title>
     <script  src="lern_js.js" rel="javascrpt/text"></script> 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Akronim&display=swap" rel="stylesheet">
 
 </head>
 <body>
-<p class="font">Reezard</p>
+    <p class="font">Reezard</p>
+
+<div class="flipflup">
+    <div class="knopki">
+        <div class="knopka"><div class="flop"><a href="#" class="volik" >Голодные  игры</a></div></div>
+        <div class="knopka"><div class="flop"> <a href="#" class="volik" >Холст </a></div></div>
+    </div>    
+</div>
+
+
 </body>
 </html>
